Some minor cascading fixes, and word-wrap fixed, fixes #96

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -451,56 +451,46 @@ h1,h2,h3,h4 { &.push-top { margin-top: $largeMargin; }}
         .profile-image
         {
             float: left;
-
-            img
-            {
-                border: 1px solid $mediumGray;
-            }
         }
 
         .current-user-profile-image
         {
             float: right;
             padding-right: 15px;
+        }
 
-            img
-            {
-                border: 1px solid $mediumGray;
-            }
+        img
+        {
+            border: 1px solid $mediumGray;
         }
 
         .body
         {
             padding-left: 10px;
             float: left;
-
-            .user a
-            {
-                color: $offBlack;
-                font-weight: bold;
-            }
-
-            .timestamp
-            {
-                color: $mediumGray;
-            }
         }
 
         .current-user-body
         {
             padding-right: 10px;
             text-align: right;
+        }
 
-            .user a
-            {
-                color: $offBlack;
-                font-weight: bold;
-            }
+        .message-content
+        {
+            word-break: break-all;
+            word-wrap: break-word;
+        }
 
-            .timestamp
-            {
-                color: $mediumGray;
-            }
+        .user a
+        {
+            color: $offBlack;
+            font-weight: bold;
+        }
+
+        .timestamp
+        {
+            color: $mediumGray;
         }
 
         .name
